--- a/Vista/ventana.ui
+++ b/Vista/ventana.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>666</width>
+    <width>685</width>
     <height>500</height>
    </rect>
   </property>
@@ -44,54 +44,10 @@
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="2" column="2">
-        <widget class="QPushButton" name="pushButtonAbrirArchivoCSV">
+       <item row="2" column="0" alignment="Qt::AlignLeft">
+        <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Seleccionar</string>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="1">
-        <widget class="QLabel" name="label_8">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="2">
-        <widget class="QPushButton" name="pushButtonBuscar">
-         <property name="text">
-          <string>Buscar</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <widget class="QLabel" name="label_5">
-         <property name="text">
-          <string>Ingrese las palabras claves a filtrar, usando espacios entre cada palabra</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Seleccione su archivo CSV</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="1">
-        <widget class="QLineEdit" name="lineEditPalabrasClave"/>
-       </item>
-       <item row="6" column="0" alignment="Qt::AlignLeft">
-        <widget class="QLabel" name="label_6">
-         <property name="font">
-          <font>
-           <weight>50</weight>
-           <bold>false</bold>
-          </font>
-         </property>
-         <property name="text">
-          <string>Palabras clave:</string>
+          <string>Direccion del Archivo:</string>
          </property>
         </widget>
        </item>
@@ -130,10 +86,221 @@
          </property>
         </widget>
        </item>
+       <item row="7" column="1">
+        <widget class="QLabel" name="label_8">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0" alignment="Qt::AlignLeft">
+        <widget class="QLabel" name="label_6">
+         <property name="font">
+          <font>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Palabras clave:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Ingrese las palabras claves a filtrar, usando espacios entre cada palabra</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="2">
+        <widget class="QPushButton" name="pushButtonBuscar">
+         <property name="text">
+          <string>Buscar</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="QPushButton" name="pushButtonAbrirArchivoCSV">
+         <property name="text">
+          <string>Seleccionar</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QLineEdit" name="lineEditPalabrasClave"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Seleccione su archivo CSV</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="neuronal">
+     <widget class="QWidget" name="layoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>641</width>
+        <height>391</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="5" column="1">
+        <widget class="QLabel" name="label_14">
+         <property name="text">
+          <string>Seleccione nuevas situaciones:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Seleccione el archivo para entrenar la red</string>
+         </property>
+        </widget>
+       </item>
+       <item row="14" column="1">
+        <widget class="QLabel" name="label_12">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="QPushButton" name="pushButtonAbrirArchivo_DataSet">
+         <property name="text">
+          <string>Seleccionar</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="2">
+        <widget class="QPushButton" name="pushButtonBuscar_DataSet">
+         <property name="text">
+          <string>Buscar</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0" alignment="Qt::AlignHCenter">
+        <widget class="QLabel" name="label_13">
+         <property name="font">
+          <font>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Situaciones</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="1">
+        <widget class="QCheckBox" name="checkBox_4">
+         <property name="text">
+          <string>Suicidio</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QCheckBox" name="checkBox">
+         <property name="text">
+          <string>Trizteza</string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="1">
+        <widget class="QCheckBox" name="checkBox_8">
+         <property name="text">
+          <string>Mascota</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1">
+        <widget class="QCheckBox" name="checkBox_5">
+         <property name="text">
+          <string>Universidad</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="1">
+        <widget class="QCheckBox" name="checkBox_6">
+         <property name="text">
+          <string>Escuela</string>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="1">
+        <widget class="QCheckBox" name="checkBox_7">
+         <property name="text">
+          <string>Familia</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QCheckBox" name="checkBox_3">
+         <property name="text">
+          <string>Depresion</string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="2">
+        <widget class="QPushButton" name="pushButtonEntrenar">
+         <property name="text">
+          <string>Entrenar</string>
+         </property>
+        </widget>
+       </item>
        <item row="2" column="0" alignment="Qt::AlignLeft">
-        <widget class="QLabel" name="label_3">
+        <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Direccion del Archivo:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="labelDireccionArchivo_2">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="1">
+        <widget class="QCheckBox" name="checkBox_2">
+         <property name="text">
+          <string>Ansiedad</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" alignment="Qt::AlignHCenter">
+        <widget class="QLabel" name="label_11">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Red Neuronal</string>
+         </property>
+        </widget>
+       </item>
+       <item row="16" column="0" alignment="Qt::AlignRight">
+        <widget class="QLabel" name="label_15">
+         <property name="text">
+          <string>Resultado:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="1" rowspan="2" colspan="2">
+        <widget class="QLabel" name="resultado_Entrenamiento">
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
@@ -147,8 +314,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>666</width>
-     <height>26</height>
+     <width>685</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuBD">
@@ -164,8 +331,15 @@
     <addaction name="itemNube"/>
     <addaction name="itemHistograma"/>
    </widget>
+   <widget class="QMenu" name="menuRed_Neuronal">
+    <property name="title">
+     <string>Red Neuronal</string>
+    </property>
+    <addaction name="itemEntrenamiento"/>
+   </widget>
    <addaction name="menuBD"/>
    <addaction name="menuFrecuencia"/>
+   <addaction name="menuRed_Neuronal"/>
   </widget>
   <action name="itemCrearBd">
    <property name="text">
@@ -185,6 +359,11 @@
   <action name="itemHistograma">
    <property name="text">
     <string>Histograma</string>
+   </property>
+  </action>
+  <action name="itemEntrenamiento">
+   <property name="text">
+    <string>Entrenamiento</string>
    </property>
   </action>
  </widget>
