--- a/Vista/ventana.ui
+++ b/Vista/ventana.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>685</width>
-    <height>500</height>
+    <width>701</width>
+    <height>506</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -146,8 +146,8 @@
        <rect>
         <x>10</x>
         <y>5</y>
-        <width>661</width>
-        <height>491</height>
+        <width>651</width>
+        <height>461</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
@@ -297,13 +297,6 @@
          </property>
         </widget>
        </item>
-       <item row="15" column="1" rowspan="2" colspan="2">
-        <widget class="QLabel" name="resultado_Entrenamiento">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_10">
          <property name="text">
@@ -313,6 +306,13 @@
        </item>
        <item row="3" column="1">
         <widget class="QLineEdit" name="lineEditIteraciones"/>
+       </item>
+       <item row="15" column="1" colspan="2">
+        <widget class="QLabel" name="resultado_Entrenamiento">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -324,8 +324,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>685</width>
-     <height>26</height>
+     <width>701</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuBD">
